traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:14: error: not found: value get
            { if (get X()==6)
                  ^