traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code
var diag = 0;

override def run() {
  var n = 0
  ecritMessage(n)
  while (!positionFinale())
      {
       if (diag<6)
            {
              if (getY()==0)
                  {setPos(0,getX()+1);diag+=1;}
              else 
                  {setPos(getX()+1,getY()-1);}}
       else 
            { if (get X()==6)
                 {setPos(getY()+1,6);diag+=1}
              
              
              
              else 
                  {setPos(getX()+1,getY()-1);}}
        n+=1;
        ecritMessage(n)      
              
            }
              
        
              
            }
   

def positionFinale():Boolean= {
  if ((getMondeHauteur()-1,getMondeLargeur()-1)==(getX(),getY()))
      {return(true);};
  return(false);}